Finish login and logout

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -169,3 +169,10 @@ input {
 .panel {
   margin-top: 50px;
 }
+
+#logout {
+  cursor: default;
+  &:hover {
+    background-color: transparent;
+  }
+}
