--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8531,3 +8531,35 @@ input {
   background-color: transparent;
 }
 
+/* Users edit */
+
+.gravatar_edit {
+  margin: 15px auto;
+  text-align: center;
+}
+
+.gravatar_edit .gravatar {
+  float: none;
+  max-width: 100px;
+}
+
+.users {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+.users li {
+  overflow: auto;
+  padding: 10px 0;
+  border-bottom: 1px solid #eeeeee;
+}
+
+/* Users index */
+
+.delete-btn {
+  float: right;
+  position: relative;
+  right: 0;
+}
+
